--- a/css/pomodoro.css
+++ b/css/pomodoro.css
@@ -25,7 +25,7 @@ body {
   justify-content: center;
   align-items: flex-start;
   margin: 0%;
-  font-size: 15vh;
+  font-size: 7vw;
   font-weight: 400;
   font-family: Roboto Mono;
   padding: 0%;
@@ -42,13 +42,86 @@ body {
   background-color: #333333;
   cursor: pointer;
   box-sizing: border-box;
-  padding: 2vh;
-  width: 10vh;
-  height: 10vh;
-  border-radius: 15px;
-  margin: 2vh;
+  padding: 1vw;
+  width: 5vw;
+  height: 5vw;
+  border-radius: 1vw;
+  margin: 1vw;
+}
+
+.button:hover{
+  background-color: #404040;
 }
 
 .button:active {
   background-color: #252525;
+}
+
+.addtarefa {
+  background-color: #666666;
+}
+
+.downpart{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.conteudo{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #333333;
+  box-sizing: border-box;
+  border-radius: 1vw;
+  margin: 2vw;
+  font-family: Roboto;
+}
+
+.topo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#inputNovaTarefa{
+  border-radius: 0.25vw;
+  padding: 0.5vw;
+  margin: 1vw 0.5vw 1vw 1vw;
+  outline: none;
+  background-color: #666666;
+  color: white
+}
+
+#btnAddTarefa{
+  background-color: #666666;
+  cursor: pointer;
+  box-sizing: border-box;
+  padding: 0.5vh;
+  width: 3vh;
+  height: 3vh;
+  border-radius: 0.5vh;
+  margin: 1vw 1vw 1vw 0.5vw;
+}
+
+#btnAddTarefa:hover{
+  background-color: #777777;
+}
+
+#btnAddTarefa:active {
+  background-color: #555555;
+}
+
+.listitem{
+  border-radius: 0.25vw;
+  padding: 0.5vw;
+  margin: 1vw 0.5vw 1vw 1vw;
+  outline: none;
+  background-color: #666666;
+  color: white;
+}
+
+::placeholder{
+  color: white;
 }
