--- a/css/pomodoro.css
+++ b/css/pomodoro.css
@@ -89,8 +89,8 @@ body {
 
 #inputNovaTarefa{
   border-radius: 0.25vw;
-  padding: 0.5vw;
-  margin: 0vw 0.5vw 0vw 0vw;
+  padding: 1vw;
+  margin: 0.5vw 0.5vw 0vw 0vw;
   outline: none;
   font-size: 1.5vw;
   font-weight: 400;
@@ -173,4 +173,28 @@ body {
 
 #btnRemoveTarefa:active {
   transform: scale(1.15);
+}
+
+.breaks{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  background-color: #333333;
+  box-sizing: border-box;
+  border-radius: 1vw;
+  margin: 1vw;
+}
+
+.breakitem{
+  background-color: #666666;
+  font-size: 1.5vw;
+  font-weight: 400;
+  font-family: Roboto;
+  color:white;
+  box-sizing: border-box;
+  border-radius: 1vw;
+  padding: 1vw;
+  margin: 1vw;
 }
