corrigido css e centralizando texto

--- a/project/css/pomodoro.css
+++ b/project/css/pomodoro.css
@@ -159,7 +159,7 @@ body {
   color: white;
 }
 
-#btnRemoveTarefa{
+.btnRemoveTarefa{
   align-self: flex-end;
   cursor: pointer;
   box-sizing: border-box;
@@ -171,30 +171,34 @@ body {
   background-color: #666666;
 }
 
-#btnRemoveTarefa:active {
+.btnRemoveTarefa:active {
   transform: scale(1.15);
 }
 
 .breaks{
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-  background-color: #333333;
   box-sizing: border-box;
   border-radius: 1vw;
-  margin: 1vw;
+  background-color: #333333;
+  margin: 1vw 1vw 1vw 1vw;
+  padding: 1vw;
 }
 
 .breakitem{
   background-color: #666666;
+  justify-content: center;
+  align-self: center;
+  text-align: center;
+  box-sizing: border-box;
+  width: 100%;
   font-size: 1.5vw;
   font-weight: 400;
   font-family: Roboto;
   color:white;
-  box-sizing: border-box;
   border-radius: 1vw;
   padding: 1vw;
-  margin: 1vw;
+  margin: 0.5vw;
 }
