--- a/project/css/pomodoro.css
+++ b/project/css/pomodoro.css
@@ -13,6 +13,18 @@ body {
   height: 100vh;
 }
 
+button{
+  border: none;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  overflow: visible;
+  background: transparent;
+  color: inherit;
+  font: inherit;
+  line-height: normal;
+}
+
 #logo {
   box-sizing: border-box;
   padding: 3.5% 5% 0% 5%;
@@ -108,8 +120,8 @@ body {
   cursor: pointer;
   box-sizing: border-box;
   padding: 0.5vh;
-  width: 4vh;
-  height: 4vh;
+  width: 3vh;
+  height: 3vh;
   border-radius: 0.5vh;
   margin: 0vw 0vw 0vw 0.5vw;
 }
