--- a/project/css/pomodoro.css
+++ b/project/css/pomodoro.css
@@ -111,6 +111,17 @@ button{
   border: none;
 }
 
+#BarraProgresso {
+  width: 100%;
+  background-color: #666666;
+}
+
+#FocoBar {
+  width: 0%;
+  height: 1vh;
+  background-color: #659b65;
+}
+
 ::placeholder{
   color: white;
 }
