--- a/project/css/pomodoro.css
+++ b/project/css/pomodoro.css
@@ -37,7 +37,7 @@ button{
   justify-content: center;
   align-items: flex-start;
   margin: 0%;
-  font-size: 7vw;
+  font-size: 6vw;
   font-weight: 400;
   font-family: Roboto Mono;
   padding: 0%;
@@ -115,6 +115,33 @@ button{
   color: white;
 }
 
+.listBtncontainer{
+  display: flex;
+  justify-content: column;
+  flex-direction: column;
+  align-items: center;
+}
+
+#btnApagaLista{
+  background-color: #666666;
+  cursor: pointer;
+  box-sizing: border-box;
+  padding: 0.75vh;
+  width: 3vh;
+  height: 3vh;
+  border-radius: 0.5vh;
+  margin: 0.25vw;
+}
+
+#btnApagaLista:hover{
+  background-color: #707070;
+}
+
+#btnApagaLista:active {
+  transform: scale(1.05);
+  background-color: #666666;
+}
+
 #btnAddTarefa{
   background-color: #666666;
   cursor: pointer;
@@ -123,7 +150,7 @@ button{
   width: 3vh;
   height: 3vh;
   border-radius: 0.5vh;
-  margin: 0vw 0vw 0vw 0.5vw;
+  margin: 0.25vw;
 }
 
 #btnAddTarefa:hover{
