--- a/project/css/pomodoro.css
+++ b/project/css/pomodoro.css
@@ -102,10 +102,11 @@ button{
 #inputNovaTarefa{
   border-radius: 0.25vw;
   padding: 1vw;
-  margin: 0.5vw 0.5vw 0vw 0vw;
+  margin: 0.5vw;
   outline: none;
   font-size: 1.5vw;
   font-weight: 400;
+  height: 100%;
   background-color: #666666;
   color: white;
   border: none;
@@ -126,10 +127,10 @@ button{
   background-color: #666666;
   cursor: pointer;
   box-sizing: border-box;
-  padding: 0.75vh;
-  width: 3vh;
-  height: 3vh;
-  border-radius: 0.5vh;
+  padding: 0.5vw;
+  width: 2vw;
+  height: 2vw;
+  border-radius: 0.25vw;
   margin: 0.25vw;
 }
 
@@ -146,10 +147,10 @@ button{
   background-color: #666666;
   cursor: pointer;
   box-sizing: border-box;
-  padding: 0.5vh;
-  width: 3vh;
-  height: 3vh;
-  border-radius: 0.5vh;
+  padding: 0.4vw;
+  width: 2vw;
+  height: 2vw;
+  border-radius: 0.25vw;
   margin: 0.25vw;
 }
 
